# ogg-magic

./: Cargo.toml  LICENSE  README.md  publish-document.sh
doc/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
doc/ogg_magic/: all.html  index.html  sidebar-items.js
doc/ogg_magic/crc/: fn.vorbis_crc32.html  index.html  sidebar-items.js
doc/ogg_magic/ogg_page/: index.html  sidebar-items.js  struct.OggFormatError.html  struct.OggPage.html
doc/ogg_magic/ogg_vorbis_page/: enum.IVorbisFloor.html  enum.VorbisHeaderType.html  enum.VorbisSetupCodebookLookupType.html  fn.float32_unpack.html  fn.ilog.html  fn.lookup1_values.html  index.html  sidebar-items.js  struct.BitStreamReader.html  struct.IVorbisCommentHeader.html  struct.IVorbisFloorType0.html  struct.IVorbisFloorType1.html  struct.IVorbisIdentificationHeader.html  struct.IVorbisMapping.html  struct.IVorbisMode.html  struct.IVorbisResidue.html  struct.IVorbisSetupCodebook.html  struct.IVorbisSetupHeader.html  struct.OggVorbisPage.html  struct.VorbisFormatError.html
doc/ogg_magic/read_ogg_vorbis_file/: enum.OggVorbisPacket.html  fn.read_ogg_vorbis_file.html  index.html  sidebar-items.js  struct.OggParseResult.html  struct.OggVorbisPageResult.html  type.OggVorbisPacketsParseResult.html  type.OggVorbiseHeaderCommentParseResult.html  type.OggVorbiseHeaderIdentificationParseResult.html  type.OggVorbiseHeaderSetupParseResult.html
doc/ogg_magic/utils/: fn.find_packet_by_type.html  (+5 more)
example/: io.rs
src/: crc.rs  lib.rs  ogg_page.rs  ogg_vorbis_page.rs  read_ogg_vorbis_file.rs  utils.rs
(+24 files in other folders)
